@@ -79,6 +79,7 @@
  * Fix cqlsh automatic protocol downgrade regression (CASSANDRA-13307)
  * Changing `max_hint_window_in_ms` at runtime (CASSANDRA-11720)
  * Trivial format error in StorageProxy (CASSANDRA-13551)
+ * Added started & completed repair metrics (CASSANDRA-13598)
 
 
 3.11.1
